[package]
name = "loadbalancer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
simple_logger = "5.0.0"
tokio = { version = "1.47.1", features = ["full"] }
pumpkin-protocol = { git = "https://github.com/Pumpkin-MC/Pumpkin", default-features = false, features = ["serverbound", "clientbound"]}

serde = "1.0.219"
serde_json = "1.0.142"
thiserror = "2.0.14"
serde_yaml = "0.9.34+deprecated"
async-trait = "0.1.88"
futures = "0.3.31"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
rand = "0.8.5"
reqwest = { version = "0.12.23", features = ["json"] }
heed = "0.22.0"
redb = "3.0.1"
tempfile = "3.21.0"
